--- a/systemd/omobus-gclo.service
+++ b/systemd/omobus-gclo.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (Large objects GC)
+Description=OMOBUS server (GC for LO)
 After=local-fs.target network.target pgsql.service
 #Requires=pgsql.service
 
