--- a/systemd/omobus-thumb800.service
+++ b/systemd/omobus-thumb800.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (thumb 800px)
+Description=[omobusd: thumb800] service
 After=local-fs.target network.target pgsql.service
 #Requires=pgsql.service
 
