--- a/systemd/omobus-2agent.service
+++ b/systemd/omobus-2agent.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (2agent)
+Description=[omobusd: 2agent] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
