--- a/systemd/omobus-2lts.service
+++ b/systemd/omobus-2lts.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (2lts)
+Description=[omobusd: 2lts] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
