--- a/systemd/omobus-acts.service
+++ b/systemd/omobus-acts.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (acts)
+Description=[omobusd: acts] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
