--- a/systemd/omobus-docs.service
+++ b/systemd/omobus-docs.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (docs)
+Description=[omobusd: docs] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
