--- a/systemd/omobus-dumps.service
+++ b/systemd/omobus-dumps.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (dumps)
+Description=[omobusd: dumps] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
