--- a/systemd/omobus-export.service
+++ b/systemd/omobus-export.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (export)
+Description=[omobusd: export] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
