--- a/systemd/omobus-geocode.service
+++ b/systemd/omobus-geocode.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (geocode)
+Description=[omobusd: geocode] service
 After=local-fs.target network.target pgsql.service
 #Requires=pgsql.service
 
