--- a/systemd/omobus-health.service
+++ b/systemd/omobus-health.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (health)
+Description=[omobusd: health] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
