--- a/systemd/omobus-routes.service
+++ b/systemd/omobus-routes.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (routes)
+Description=[omobusd: routes] service
 After=local-fs.target network.target pgsql.service
 #Requires=pgsql.service
 
