--- a/systemd/omobus-sync.service
+++ b/systemd/omobus-sync.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (sync)
+Description=[omobusd: sync] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
