--- a/systemd/omobus-thumb.service
+++ b/systemd/omobus-thumb.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (thumb)
+Description=[omobusd: thumb] service
 After=local-fs.target network.target pgsql.service
 #Requires=pgsql.service
 
