--- a/systemd/omobus-ttd.service
+++ b/systemd/omobus-ttd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (Transfered-To-Distributor)
+Description=[omobusd: ttd] service
 After=local-fs.target network.target pure-ftpd.service pgsql.service
 #Requires=pure-ftpd.service pgsql.service
 
