--- a/systemd/omobus-zombie.service
+++ b/systemd/omobus-zombie.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=OMOBUS server (zombie)
+Description=[omobusd: zombie] service
 After=local-fs.target network.target slapd.service pgsql.service
 #Requires=slapd.service pgsql.service
 
