systemd: minor changes.

--- a/systemd/omobus-gc.service
+++ b/systemd/omobus-gc.service
@@ -13,6 +13,7 @@ ExecStop=/bin/kill -s USR1 $MAINPID
 #RemainAfterExit=no
 #Restart=on-failure
 #RestartSec=5s
+TimeoutStopSec=5s
 
 [Install]
 WantedBy=multi-user.target
